Fixed an errant div tag.

--- a/dada/DADA/Template/templates/list_options_screen.tmpl
+++ b/dada/DADA/Template/templates/list_options_screen.tmpl
@@ -924,9 +924,8 @@ Unsubscription Confirmations
 		<div class="badweatherbox">
 		    <p>
 		     <strong>Disabled.</strong> The Net::DNS module needs to be installed.
-		     </em>
 		    </p>
-		<div>
+		</div>
 	<!--/tmpl_unless-->
 
 	   </td>
