Added a, "Minimal" Subscription form for people who like to do some customizing and want to start with a simple form...

--- a/dada/DADA/Template/templates/html_code_screen.tmpl
+++ b/dada/DADA/Template/templates/html_code_screen.tmpl
@@ -9,6 +9,10 @@
 </div>
 
 
+
+
+<h1>Full Subscription Form</h1>
+	
 <fieldset>
 <legend>
 HTML</legend>
@@ -38,14 +42,40 @@ JavaScript</legend>
 
 </fieldset>
 
-<fieldset style="background:#fff">
+<fieldset>
 <legend>
 Working Preview</legend>
 <!-- tmpl_var subscription_form  -->
 
 </fieldset> 
 
- 
+<hr /> 
+
+<h1>Minimal Subscription Form</h1> 
+
+	
+	<fieldset>
+	<legend>
+	HTML</legend>
+
+	 <p>
+	  Copy the code in the text box and add it to any page on your site.
+	 </p>
+	 <textarea name="min_code" cols="50" rows="12"><!-- tmpl_include minimal_subscription_form.tmpl escape="HTML" --></textarea>
+	</fieldset>
+	
+	<fieldset>
+	<legend>
+	Working Preview</legend>
+<!-- tmpl_include minimal_subscription_form.tmpl -->
+	</fieldset>
+	
+	
+</fieldset> 
+
+
+
+
 
 
 <!-- end html_code_screen.tmpl -->
