...yeah you can't escape an include...

--- a/dada/DADA/Template/templates/html_code_screen.tmpl
+++ b/dada/DADA/Template/templates/html_code_screen.tmpl
@@ -61,7 +61,7 @@ Working Preview</legend>
 	 <p>
 	  Copy the code in the text box and add it to any page on your site.
 	 </p>
-	 <textarea name="min_code" cols="50" rows="12"><!-- tmpl_include minimal_subscription_form.tmpl escape="HTML" --></textarea>
+	 <textarea name="min_code" cols="50" rows="12"><!-- tmpl_var minimal_subscription_form --></textarea>
 	</fieldset>
 	
 	<fieldset>
