Getting 'er ready for the v5.2.1 release!

--- a/dada/DADA/Template/templates/html_code_screen.tmpl
+++ b/dada/DADA/Template/templates/html_code_screen.tmpl
@@ -3,7 +3,7 @@
 <!-- tmpl_set name="title" value="Appearance and Templates &#187; Subscription Form HTML" -->
 <div id="screentitle"> 
 	<div id="screentitlepadding">
-		<!-- tmpl_var title --> 
+		Appearance and Templates &#187; Subscription Form HTML
 	</div> 
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
