Have the SQL options displayed by default makes loading the installer with something a miss with the JS stuff work gooder

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -352,7 +352,7 @@ If using either the SQL backends, make sure to create a new database before conf
 </p>
 
 <!-- tmpl_if can_use_DBI --> 
-<div id="sql_info" style="display:none;"> 
+<div id="sql_info"> 
 <fieldset>
 	<legend>SQL Information</legend> 
 	
