--- a/dada/installer-disabled/templates/tiny_mce_config_js.tmpl
+++ b/dada/installer-disabled/templates/tiny_mce_config_js.tmpl
@@ -28,7 +28,8 @@ tinyMCE.init({
 	plugins : "inlinepopups,paste,searchreplace,style",
     dialog_type : "modal",
 
-	theme_advanced_buttons1_add : "styleprops",
+    theme_advanced_buttons1     : "bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,|,formatselect,fontselect,fontsizeselect", //,styleselect
+	theme_advanced_buttons1_add : "|,styleprops",
     theme_advanced_buttons3_add : "pastetext,pasteword,selectall,search,replace",
     paste_auto_cleanup_on_paste : true,
 
