--- a/dada/DADA/Template/templates/admin_template.tmpl
+++ b/dada/DADA/Template/templates/admin_template.tmpl
@@ -14,14 +14,26 @@
   <link rel="stylesheet" href="<!-- tmpl_var S_PROGRAM_URL -->/css/modalbox.css" type="text/css"  media="screen" />
 <!-- /tmpl_if -->
 
-  <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/dada_mail_admin_js.js"         type="text/javascript"></script>
-  <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/prototype_scriptaculous_package.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
+
+<script src="<!-- tmpl_var S_PROGRAM_URL -->/js/dada_mail_admin_js.js"         type="text/javascript"></script>
+ 
+
+
+
+
+<!-- tmpl_if comment --> 
+
+
 
 		<!-- tmpl_if comment --> 
 			<!-- These will not be loaded, rather, "prototype_scriptaculous_package.js" will be used. -->
 			<script src="<!-- tmpl_var S_PROGRAM_URL -->/js/prototype.js" type="text/javascript"></script>
 			<script src="<!-- tmpl_var S_PROGRAM_URL -->/js/scriptaculous.js?load=effects" type="text/javascript"></script>
 		<!-- /tmpl_if --> 
+
+<!-- /tmpl_if  -->
 
 
 <!-- tmpl_if load_modalbox --> 
