--- a/dada/DADA/Template/templates/view_list_screen.tmpl
+++ b/dada/DADA/Template/templates/view_list_screen.tmpl
@@ -1,68 +1,73 @@
 <!-- begin view_list_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="Membership &#187; View" -->
-<!-- tmpl_set name="load_modalbox" value="1" -->
-
+<!-- tmpl_if comment --> 
+<!-- tmpl_set name="load_modalbox" value="0" -->
+<!-- /tmpl_if --> 
 <script type="text/javascript">
 //<![CDATA[
 
-	
-	
-Event.observe(window, 'load', function() {
-	view_list_viewport();
-	
-});
+	$(document).ready(function() {
+		$(window).load(function() {
+			view_list_viewport();
+		}); 
+		
+		$(".clickthis").live("click", function(event){
+				alert($(this).text());
+		});
 
-function view_list_viewport(){ 	
-	new Ajax.Updater(
-		'view_list_viewport', '<!-- tmpl_var S_PROGRAM_URL -->', 
-		{ 
-		    method: 'post', 
-			parameters: {
-				f:         'view_list',
-				mode:      'viewport', 
-				type:      $F('type'),
-				page:      $F('page'),			
-				query:     $F('query'),				
-				order_by:  $F('order_by'), 				
-				order_dir: $F('order_dir'),
 
-			},
-		onCreate: 	 function() {
-			$('view_list_viewport_loading').update('<p class="alert">Loading...</p>');
-		},
-		onComplete: 	 function() {
-			$('view_list_viewport_loading').update('<p class="alert">&nbsp;</p>');
-			//Effect.BlindDown('view_list_viewport');
-		}	
 	});
-}
+	
+	function view_list_viewport(){ 	
+		$("#view_list_viewport_loading").html( '<p class="alert">Loading...</p>' );
+		var request = $.ajax({
+		  url: "<!-- tmpl_var S_PROGRAM_URL -->",
+		  type: "POST",
+		  cache: false,
+		  data: {
+			f:         'view_list',
+			mode:      'viewport', 
+			type:      $("#type").val(),
+			page:      $("#page").val(),
+			query:     $("#query").val(),
+			order_by:  $("#order_by").val(),
+			order_dir: $("#order_dir").val()
+		  },
+		  dataType: "html"
+		});
+		request.done(function(content) {
+		  $("#view_list_viewport").html( content );
+		  $("#view_list_viewport_loading").html( '<p class="alert">&nbsp;</p>' );
+		});
+	}
 
-function turn_page(page_to_turn_to) { 
-	Form.Element.setValue('page', page_to_turn_to) ; 
-	view_list_viewport();
-}
-function change_type(type_to_go_to) { 
-	Form.Element.setValue('type', type_to_go_to) ; 
-	Form.Element.setValue('page', 1) ; 
-	view_list_viewport();
-}
-function search_list(){ 
-	Form.Element.setValue('page', 1) ; 
-	Form.Element.setValue('query', $F('search_query')) ; 
-	view_list_viewport();
-}
-function clear_search(){ 
-	Form.Element.setValue('query', '');
-		Form.Element.setValue('page', 1) ; 
+	function turn_page(page_to_turn_to) { 
+		$("#page").val(page_to_turn_to);
+		view_list_viewport();
+	}
+	function change_type(type_to_go_to) { 
+		$("#type").val(type_to_go_to);
+		$("#page").val(1); 
+		view_list_viewport();
+	}
+	function search_list(){ 
+		$("#page").val(1); 
+		$("#query").val($("#search_query").val()); 
+		view_list_viewport();
+	}
+	function clear_search(){ 
+		$("#query").val(''); 
+		$("#page").val(1); 
 		view_list_viewport(); 
-}
-function change_order(order_by, order_dir) { 
-		Form.Element.setValue('order_by', order_by) ; 
-		Form.Element.setValue('order_dir', order_dir) ; 
-		Form.Element.setValue('page', 1) ;
+	}
+	function change_order(order_by, order_dir) { 
+		$("#order_by").val(order_by); 
+		$("#order_dir").val(order_dir); 
+		$("#page").val(1); 
 		view_list_viewport();	 
-}
+	}
+
 
 //]]>
 </script>
@@ -75,6 +80,8 @@ function change_order(order_by, order_dir) {
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
 
+	<div class="clickthis">Default Text</div>
+	
 <form id="viewport_values">
 	<input type="hidden" id="type"      name="type"      value="<!-- tmpl_var type escape="HTML" -->" />	
 	<input type="hidden" id="page"      name="page"      value="<!-- tmpl_var page escape="HTML"  -->" />	
@@ -85,7 +92,7 @@ function change_order(order_by, order_dir) {
 
 <!-- tmpl_include view_list_modalmenu_widget.tmpl -->
 
-<div id="view_list_viewport_loading" style="margin:0; padding:0"><p class="alert">&nbsp;</p></div>
+<div id="view_list_viewport_loading"></div>
 <div id="view_list_viewport"></div> 
 
 
