Finished(?) View List, as well as individual membership screens, plus some global stuff. Lots to change! Think I got a hold of it;

--- a/dada/DADA/Template/templates/changes_saved_dialog_box_widget.tmpl
+++ b/dada/DADA/Template/templates/changes_saved_dialog_box_widget.tmpl
@@ -1,13 +1,13 @@
 <!-- begin changes_saved_dialog_box_widget.tmpl --> 
 
-<div class="clearskiesbox" id="changed_saved_dialog_box">
+<div class="clearskiesbox" id="alertbox">
 
 	<p>
 		Your changes have been saved!
 	</p>
 
 	<div style="text-align: center;">
-	<input type="button" class="small_button" value="Ok!" onClick="Effect.Fade('changed_saved_dialog_box');" />
+	<input type="button" class="small_button fade_me" value="Ok!" />
 	</div>
 	
 </div> 
