--- a/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
@@ -45,7 +45,7 @@
         </p>
 		<div style="text-align: center;">
 
-		<input type="button" class="small_button" value="Thanks!" onClick="Effect.Fade('alertbox');" />
+		<input type="button" class="small_button fade_me" value="Thanks!" />
 		</div>
 	</div>
 <!-- /tmpl_if --> 
