--- a/dada/DADA/Template/templates/view_list_modalmenu_widget.tmpl
+++ b/dada/DADA/Template/templates/view_list_modalmenu_widget.tmpl
@@ -101,7 +101,7 @@
 		
 	<div style="text-align: center;">
 	
-	<input type="button" class="small_button" value="Thanks!" onClick="$( '#alertbox' ).effect( 'fade' );" />
+	<input type="button" class="small_button fade_me" value="Thanks!" />
 	</div>
 
 </div> 
