--- a/dada/DADA/Template/templates/view_list_viewport_widget.tmpl
+++ b/dada/DADA/Template/templates/view_list_viewport_widget.tmpl
@@ -123,7 +123,7 @@
 	<table class="stripedtable">
 	  <tr>
 	   		<td width="25">
-	    		<input type="checkbox" onClick="toggleCheckBoxes(this, 'address')"/>
+	    		<input class="toggleCheckboxes" type="checkbox" data-target_class="address" />
 	   		</td>
 
 		
