--- a/dada/DADA/Template/templates/view_list_slide_nav_widget.tmpl
+++ b/dada/DADA/Template/templates/view_list_slide_nav_widget.tmpl
@@ -3,13 +3,13 @@
 <table width="100%" cellpadding="0" cellspacing="0">
  <tr> 
 <td align="left"> 
-<strong><a href="javascript:turn_page(<!-- tmpl_var first_page -->)">&lt;&lt;</a></strong>
+<strong><a href="#" class="turn_page" data-page="<!-- tmpl_var first_page -->">&lt;&lt;</a></strong>
 </td> 
 <td align="center"> 
 
 
 <!-- tmpl_if previous_page --> 
-	<strong><a href="javascript:turn_page(<!-- tmpl_var previous_page -->)">&lt; </a></strong>
+	<strong><a href="#" class="turn_page" data-page="<!-- tmpl_var previous_page -->">&lt; </a></strong>
 <!-- tmpl_else --> 
 <!-- /tmpl_if -->
 	<!-- tmpl_loop pages_in_set --> 
@@ -18,14 +18,14 @@
 			 <!-- tmpl_var page --> 
 			</strong> 
 		<!-- tmpl_else --> 
-			<a href="javascript:turn_page(<!-- tmpl_var page -->)">
+			<a href="#" class="turn_page" data-page="<!-- tmpl_var page -->">
 			 <!-- tmpl_var page --> 
 			</a>
 		<!-- /tmpl_if --> 
 
 	<!-- /tmpl_loop --> 
 	<!-- tmpl_if next_page -->
-	 <strong><a href="javascript:turn_page(<!-- tmpl_var next_page -->)"> &gt;</a></strong>
+	 <strong><a href="#"  class="turn_page" data-page="<!-- tmpl_var next_page -->"> &gt;</a></strong>
 	<!-- tmpl_else --> 
 	<!-- /tmpl_if --> 
 	
@@ -33,7 +33,7 @@
 
 <td align="right"> 
 
-<strong><a href="javascript:turn_page(<!-- tmpl_var last_page -->)">&gt;&gt;</a></strong>
+<strong><a href="#" class="turn_page" data-page="<!-- tmpl_var last_page -->">&gt;&gt;</a></strong>
 
 </td>
 
