Adding auto-complete in the search box for the view list screen, change the list type switcher to be a little less obstructive

--- a/dada/DADA/Template/templates/list_type_switch_widget.tmpl
+++ b/dada/DADA/Template/templates/list_type_switch_widget.tmpl
@@ -3,7 +3,7 @@
 		<ul>
 			<li <!-- tmpl_if EXPR="(type eq 'list')" --> class="active" <!-- /tmpl_if -->>
 				<!-- tmpl_if flavor_is_view_list --> 
-					<a href="javascript:change_type('list');">
+					<a href="#" class="change_type" data-type="list">
 				<!-- tmpl_else --> 
 					<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=<!-- tmpl_var flavor -->;type=list">					
 				<!-- /tmpl_if -->
@@ -17,7 +17,7 @@
 			<!-- tmpl_if flavor_is_view_list --> 
 				<!-- tmpl_if list_settings.enable_subscription_approval_step -->
 					<li <!-- tmpl_if EXPR="(type eq 'sub_request_list')" --> class="active" <!-- /tmpl_if -->> 
-						<a href="javascript:change_type('sub_request_list');">
+						<a href="#" class="change_type" data-type="sub_request_list">
 					  <span>
 						Subscription Requests  (<!-- tmpl_var sub_request_list_subscribers_num -->)
 					  </span>
@@ -29,7 +29,7 @@
 			
 			<li <!-- tmpl_if EXPR="(type eq 'black_list')" --> class="active" <!-- /tmpl_if -->>
 			<!-- tmpl_if flavor_is_view_list -->
-				<a href="javascript:change_type('black_list');">
+				<a href="#" class="change_type" data-type="black_list">
 			<!-- tmpl_else --> 
 				<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=<!-- tmpl_var flavor -->;type=black_list">
 			<!-- /tmpl_if -->
@@ -42,7 +42,7 @@
 			<!-- tmpl_if list_settings.enable_white_list -->
 				<li <!-- tmpl_if EXPR="(type eq 'white_list')" --> class="active" <!-- /tmpl_if -->>
 				<!-- tmpl_if flavor_is_view_list --> 
-					<a href="javascript:change_type('white_list');">
+					<a href="#" class="change_type" data-type="white_list">
 				<!-- tmpl_else --> 
 					<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=<!-- tmpl_var flavor -->;type=white_list">
 				<!-- /tmpl_if -->
@@ -56,7 +56,7 @@
 			<!-- tmpl_if list_settings.enable_authorized_sending -->
 				<li <!-- tmpl_if EXPR="(type eq 'authorized_senders')" --> class="active" <!-- /tmpl_if -->>
 				<!-- tmpl_if flavor_is_view_list --> 
-				  	<a href="javascript:change_type('authorized_senders');">
+				  	<a href="#" class="change_type" data-type="authorized_senders">
 				<!-- tmpl_else --> 
 					<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=<!-- tmpl_var flavor -->;type=authorized_senders">
 				<!-- /tmpl_if -->
@@ -72,7 +72,7 @@
 				<!-- tmpl_if show_bounced_list -->
 				<li <!-- tmpl_if EXPR="(type eq 'bounced_list')" --> class="active" <!-- /tmpl_if -->>
 				
-					<a href="javascript:change_type('bounced_list');">
+					<a href="#" class="change_type" data-type="bounced_list">
 					 <span>
 						Bouncing Addresses (<!-- tmpl_var bounced_list_num -->)
 					</span>  
