--- a/dada/DADA/Template/templates/sending_preferences_test_widget.tmpl
+++ b/dada/DADA/Template/templates/sending_preferences_test_widget.tmpl
@@ -1,7 +1,7 @@
 <!-- begin sending_preferences_test_widget.tmpl --> 
 
 
-	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->	
+<p>You changes have been saved!</p> 
 	
 	<p>
 		
